2008-09-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (EnhanceImage): Accelerate using OpenMP.
	* magick/shear.c (IntegralRotateImage): Add missing progress
	indication for 90 and 270 degrees rotation.
	* www/perl.html: Fix formatting of examples.  Should address
	SourceForge issue [ 2100339 ] "Wrong format in example script on
	web page".

2008-09-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/effect.c (BlurImage): Accelerate using OpenMP.

2008-09-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ColorizeImage): Re-implement using pixel iterators.
	(MorphImages): Re-implement using pixel iterators.
	(OilPaintImage): Accelerate using OpenMP.
	(SolarizeImage): Re-implement using pixel iterators.

2008-09-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ConvolveImage): Accelerate using OpenMP.
	* magick/effect.c (AdaptiveThresholdImage): Accelerate using OpenMP.

2008-09-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c: Exhuastive study of the pixel cache code
	reveals that it is inscrutable and not implemented in a fashion
	which enables useful multi-threading.  Therefore, the cache view
	interfaces are now made OpenMP-safe via a global critical section.

2008-09-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_iterator.c: Reduce use of critical sections around
	pixel cache to the bare minimum based on analysis and testing.
	Unfortunately, testing shows that the pixel cache views are still
	not 100% thread safe so the extra locking is still required.
	* magick/pixel_cache.c (ModifyCache): Make implementation thread
	safe.  This required removing a thread-unsafe optimization from
	Bill Radcliffe.
	* magick/command.c (BenchmarkImageCommand): Restore original
	client name for each loop so that it is not extended further for
	each iteration.
	* magick/semaphore.c (UnlockSemaphoreInfo): Decrement lock depth
	under protection of the lock.
