@@ -25,6 +25,7 @@
 
 <UL>
   <LI> magick/effect.c (EnhanceImage): Accelerate using OpenMP.
+        (BlurImageScanlines): Added optimizations.
   <LI> magick/shear.c (IntegralRotateImage): Add missing progress
         indication for 90 and 270 degrees rotation.
   <LI> www/perl.html: Fix formatting of examples.  Should address
